	config/ac_freeipmi_config_file.m4: New files.

	* Adjust --no-probing to --disable-auto-probe.

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c (cmdline_config_file_parse): New
	function.  Add new --config-file option support.

	* ipmipower/, ipmiconsole/: Use new generic config-file option.

	* General cmdline parsing cleanup throughout.

2008-05-20  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors-config/src/ipmi-sensors-config.c
	(_ipmi_sensors_config): Fix flush corner case.

	* common/src/tool-cmdline-common.c: Add driver_device path check.
	Cleanup argp_usage() usage.  Cleanup integer conversion code.

	* More general code cleanup.

2008-05-20  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/, ipmipower/: Remove hostname config-file option.
	Require users to always input atleast the hostname.

	* common/src/, ipmi-sel/, ipmi-fru/, ipmi-sensors/,
	ipmimonitoring/, ipmi-sensors-config/: Remove useless
	sdr_cache_dir_wanted flag.

	* common/src/tool-cmdline-common.c (verify_sdr_cmd_args,
	sdr_parse_opt): Move sdr cache dir check into verify checks.

	* common/src/tool-cmdline-common.c,
	common/src/tool-cmdline-common.h: Replace common_cmd_args 'flags'
	with 'debug' flag.

	* common/src/tool-cmdline-common.c: Adjust for above change.

	* Adjust all tools for use of logical debug flag.
	
2008-05-19  Albert Chu <chu11@llnl.gov>

	* Make all argp docs/version/naming consistent.  Make description
	consistent between tool and manpages.

	* common/src: Rename config lib to config-tool lib, to
	differentiate from config file lib later on.

2008-05-19  Albert Chu <chu11@llnl.gov>

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Fix option ordering.  Fix
	--timeout legacy support.  Support outofband only driver type
	parsing.

	* ipmipower/src/: Use common parsing code not internal parsing
	code.  Use common parsing args.  More code cleanup.

	* bmc-config/src/bmc-config-argp.h: Remove extraneous headers.
