@@ -1,0 +1,3 @@
+.TP
+\fB\-\-config\-file\fR=\fIFILE\fR
+Specify alternate configuration file.
