@@ -1,5 +1,5 @@
 .\"#############################################################################
-.\"$Id: ipmipower.8.pre.in,v 1.41 2008-05-16 20:46:21 chu11 Exp $
+.\"$Id: ipmipower.8.pre.in,v 1.42 2008-05-21 02:15:53 chu11 Exp $
 .\"#############################################################################
 .\"  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
 .\"  Copyright (C) 2003-2007 The Regents of the University of California.
@@ -76,12 +76,10 @@ to 400 milliseconds (0.4 seconds) if not specified.
 #include <@top_srcdir@/common/doc/manpage-common-cipher-suite-id-main.man>
 #include <@top_srcdir@/common/doc/manpage-common-cipher-suite-id-details.man>
 #include <@top_srcdir@/common/doc/manpage-common-privilege-level-operator.man>
+#include <@top_srcdir@/common/doc/manpage-common-config-file.man>
 #include <@top_srcdir@/common/doc/manpage-common-workaround-flags.man>
 #include <@top_srcdir@/common/doc/manpage-common-debug.man>
 #include <@top_srcdir@/common/doc/manpage-common-misc.man>
-.TP
-\fB\-\-config file\fR
-Specify an alternate configuration file.
 .if @WITH_DEBUG@ \{
 .TP
 \fB\-\-rmcpdump\fR
